styles/style.css
html, body {
    height: 100%;
    margin: 0;
    font-family: 'Raleway', sans-serif;
    box-sizing: border-box;
}

*, ::before, ::after {
    margin: 0;
    padding: 0;
    position: relative;
    box-sizing: border-box;
}

a {
    color: #3895D3;
    font-weight: bolder;
    text-decoration: none;
}

a:hover {
    color: #072F5F;

}
/** BEGIN HEADER **/
#header-content {
    margin-top: 10em;
    -webkit-animation-duration: 1.7s;
    -webkit-animation-iteration-count: 1;
}

#header-content h2 {
    font-size: 4em;
}

#header-content h4 {
    font-size: 1.5em;
}

#header {
    color: #fff;
    min-height: 100%;
    min-width: 100%;
    position: relative;
    background-image: url(../assets/bg7.jpg);
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    text-align: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    padding: 7.5em 0 2em 0;
    cursor: default;
    background-size: cover;
}

/** END HEADER **/

/** BEGIN ARROW DOWN HEADER **/
#arrow-down {
    position: absolute;
    bottom: 10px;
    left: 0;
    right: 0;
    -webkit-animation-delay: 2.5s;
    -webkit-animation-iteration-count: infinite;
}

i {
    border: solid white;
    border-width: 0 4px 4px 0;
    display: inline-block;
    padding: 9px
}

.down {
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
}

/** END ARROW DOWN HEADER **/

/** BEGIN CONTENT STYLE **/
.col {
    display: flex;
    flex-direction: row;
}

.row-content {
    flex-grow: 2;
}

.row {
    display: flex;
    flex-direction: row;
    justify-content: auto;
    padding: 0 3em;
    width: auto;
    margin: 3em 0;

}

.title {
    width: 20%;
    margin: 0;
}

#about-me {
    border-right: 2.5px solid rgb(78, 105, 133);;
}

#intro {
    width: 80%;
    margin: 0 .2em;
    text-align: justify;
}

#my-projects{
    width: 20%;
    margin: 0;
}

.card-deck {
    width: 80%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: center;
}

.card {
    margin: 0 .7em;  /* Magic! */
    border-radius: 10px;
    box-shadow: 0 2px 6px rgba(0,0,0,.2);
    margin-bottom: .7em;
    text-align: center;
    max-width: 20em;
}

.img-card {
    display: block;
    border-radius: 10px 10px 0 0;
    width: 100%;
    height: 50%;
    object-fit: cover;
}

.card-content{
    height: 50%;
    padding: .1em;
}
#education-content{
    width: 80%;
}

#education-list {
    display: flex;
    flex-direction: column;
    width: 100%;
}
div#education-list > p {
    text-align: justify;
}
.education-list-item-year {
    font-weight: bold;
}
.education-list-item {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    text-align: justify;
    width: 100%;
    margin: 1.2em 0;
}

.education-list-item-text {
    margin-left: 15em;
}

.skills {
    text-align: right;
    padding-top: 10px;
    padding-bottom: 10px;
    color: white;
}

#skills-content {
    width: 80%;
}
.skills-bar-container {
    border-radius: 10px;
    width: 80%;
    background-color: #ddd;
}
.php {padding-right: .7em; width: 45%; background-color: rgb(78, 105, 133); border-radius: 10px;}
.js {padding-right: .7em; width: 35%; background-color: rgb(78, 105, 133); border-radius: 10px;}
.unix {padding-right: .7em; width: 40%; background-color: rgb(78, 105, 133); border-radius: 10px;}
.git {padding-right: .7em; width: 35%; background-color: rgb(78, 105, 133); border-radius: 10px;}
.docker {padding-right: .7em; width: 20%; background-color: rgb(78, 105, 133); border-radius: 10px;}
.mysql {padding-right: .7em; width: 30%; background-color: rgb(78, 105, 133); border-radius: 10px;}
.mongodb {padding-right: .7em; width: 15%; background-color: rgb(78, 105, 133); border-radius: 10px;}
.java {padding-right: .7em; width: 35%; background-color: rgb(78, 105, 133); border-radius: 10px;}
.proglanguage {padding-right: .7em; width: 20%; background-color: rgb(78, 105, 133); border-radius: 10px;}

.interests-flex {
    display: flex;
    width: 100%;
    flex-wrap: wrap;
}

.interests-flex-items {
    background-color: rgb(78, 105, 133);
    color: #fff;
    border-radius: 10px;
    width: 40%;
    padding: .5em;
    text-align: center;
    margin: .5em;
}

.interests-flex-items:hover {
    font-weight: bold;
}

footer {
    display: flex;
    justify-content: center;
    background-color: rgb(78, 105, 133);
    color: white;
    padding: 2em;
}



/** END CONTENT STYLE **/

/** BEGIN MOBILE PART **/
@media screen and (max-width:700px) {
    .row {
        flex-direction: column;
    }
    .card {
        margin-bottom: 1em;
        width: 90%;
        height: auto;
    }

    .card-deck {
        flex-direction: column;
        align-items: center;
        width: 100%;
    }

    .education-list-item {
        flex-direction: column;
    }
    .education-list-item-text {
        margin-top: .1em;
        margin-left: 0;
    }

    #about-me {
        border-right: none;
    }

    .title {
        width: 100%;
        margin: 0;
    }

    #intro {
        width: 100%;
    }

    .interests-flex {
        flex-direction: column;
    }

    .interests-flex-items {
        width: 100%;
    }
}

@media screen and (max-width:480px) {
    .card-deck {
    flex-direction: column;
    align-items: center;

    }

    #header-content h2 {
        font-size: 2.5em;
    }

    #header-content {
        margin-top: 0;
    }

    #header {
        background: url("../assets/bg7.jpg") no-repeat 50% 50% fixed;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-size: cover;
        background-attachment: scroll;
        height: 100vh;
        padding: 5.5em 0 1em 0;
    }

    #header-content h3 {
        font-size: 1.5em;
    }
}

